QSA-165 Upgrade to Java 17